Actualitzar llibreria de notib-client a la llibreria notib-client-2 #834
