# carpeta-api-externa/src/main/java/es/caib/carpeta/api/externa/estadistiques/Estadistiques.java
@@ -11,6 +11,7 @@ import javax.servlet.http.HttpServletRequest;
 import javax.ws.rs.Consumes;
 import javax.ws.rs.GET;
 import javax.ws.rs.Path;
+import javax.ws.rs.PathParam;
 import javax.ws.rs.Produces;
 import javax.ws.rs.QueryParam;
 import javax.ws.rs.core.Context;
@@ -325,6 +326,167 @@ public class Estadistiques extends RestUtils {
 
             throw new RestException(msg, Response.Status.BAD_REQUEST);
         }
+    }
+    @GET
+    @Produces(MediaType.APPLICATION_JSON)
+    @Consumes(MediaType.APPLICATION_JSON)
+    @Path("/consulta/v2/notificacions/{nif}")
+    public Response consultaNotificacions(@PathParam("nif") String nif) {
+        log.info("REST request health check");
+        return Response.status(200).entity("{\n"
+                + "  \"numeroElementsTotals\": 323,\n"
+                + "  \"numeroElementsRetornats\": 3,\n"
+                + "  \"resultat\": [\n"
+                + "    {\n"
+                + "      \"id\": 3752500,\n"
+                + "      \"emisor\": \"GOIB\",\n"
+                + "      \"organGestor\": {\n"
+                + "        \"codi\": \"A04027005\",\n"
+                + "        \"nom\": \"Direcció General de Simplificació Administrativa, Modernització i Administració Digital\",\n"
+                + "        \"descripcio\": null\n"
+                + "      },\n"
+                + "      \"procediment\": {\n"
+                + "        \"codi\": \"894623\",\n"
+                + "        \"nom\": \"Mesures de camp electromagnètic (SE)\",\n"
+                + "        \"descripcio\": null\n"
+                + "      },\n"
+                + "      \"numExpedient\": null,\n"
+                + "      \"concepte\": \"test not web\",\n"
+                + "      \"descripcio\": null,\n"
+                + "      \"dataEnviament\": \"2024-01-25T07:34:53.962+0000\",\n"
+                + "      \"estat\": {\n"
+                + "        \"codi\": \"EXPIRADA\",\n"
+                + "        \"nom\": \"Expirada\",\n"
+                + "        \"descripcio\": \"S’ha superat la data de caducitat\"\n"
+                + "      },\n"
+                + "      \"dataEstat\": \"2024-02-02T23:00:00.000+0000\",\n"
+                + "      \"document\": {\n"
+                + "        \"nom\": \"blank.pdf\",\n"
+                + "        \"mediaType\": \"application/pdf\",\n"
+                + "        \"mida\": 6911,\n"
+                + "        \"url\": \"https://se.caib.es/notibapi/interna/consulta/v2/document/3752498\"\n"
+                + "      },\n"
+                + "      \"titular\": {\n"
+                + "        \"tipus\": {\n"
+                + "          \"codi\": \"FISICA\",\n"
+                + "          \"nom\": \"Persona física\",\n"
+                + "          \"descripcio\": null\n"
+                + "        },\n"
+                + "        \"nom\": \"Nom\",\n"
+                + "        \"llinatge1\": \"Llinatges\",\n"
+                + "        \"llinatge2\": null,\n"
+                + "        \"nif\": \"99999999R\",\n"
+                + "        \"email\": null\n"
+                + "      },\n"
+                + "      \"destinataris\": [],\n"
+                + "      \"error\": false,\n"
+                + "      \"errorData\": null,\n"
+                + "      \"errorDescripcio\": null,\n"
+                + "      \"justificant\": null,\n"
+                + "      \"certificacio\": \"https://se.caib.es/notibapi/interna/consulta/v2/certificacio/3752500\"\n"
+                + "    },\n"
+                + "    {\n"
+                + "      \"id\": 3975600,\n"
+                + "      \"emisor\": \"GOIB\",\n"
+                + "      \"organGestor\": {\n"
+                + "        \"codi\": \"A04027005\",\n"
+                + "        \"nom\": \"Direcció General de Simplificació Administrativa, Modernització i Administració Digital\",\n"
+                + "        \"descripcio\": null\n"
+                + "      },\n"
+                + "      \"procediment\": {\n"
+                + "        \"codi\": \"894623\",\n"
+                + "        \"nom\": \"Mesures de camp electromagnètic (SE)\",\n"
+                + "        \"descripcio\": null\n"
+                + "      },\n"
+                + "      \"numExpedient\": null,\n"
+                + "      \"concepte\": \"Activitat 4\",\n"
+                + "      \"descripcio\": \"Activitat de la Dehú\",\n"
+                + "      \"dataEnviament\": \"2024-01-29T16:47:51.012+0000\",\n"
+                + "      \"estat\": {\n"
+                + "        \"codi\": \"EXPIRADA\",\n"
+                + "        \"nom\": \"Expirada\",\n"
+                + "        \"descripcio\": \"S’ha superat la data de caducitat\"\n"
+                + "      },\n"
+                + "      \"dataEstat\": \"2024-02-08T23:00:00.000+0000\",\n"
+                + "      \"document\": {\n"
+                + "        \"nom\": \"annex_firmat.pdf\",\n"
+                + "        \"mediaType\": \"application/pdf\",\n"
+                + "        \"mida\": 67506,\n"
+                + "        \"url\": \"https://se.caib.es/notibapi/interna/consulta/v2/document/3975597\"\n"
+                + "      },\n"
+                + "      \"titular\": {\n"
+                + "        \"tipus\": {\n"
+                + "          \"codi\": \"FISICA\",\n"
+                + "          \"nom\": \"Persona física\",\n"
+                + "          \"descripcio\": null\n"
+                + "        },\n"
+                + "        \"nom\": \"Nom\",\n"
+                + "        \"llinatge1\": \"Llinatge1 Llinatge2\",\n"
+                + "        \"llinatge2\": null,\n"
+                + "        \"nif\": \"99999999R\",\n"
+                + "        \"email\": null\n"
+                + "      },\n"
+                + "      \"destinataris\": [],\n"
+                + "      \"error\": false,\n"
+                + "      \"errorData\": null,\n"
+                + "      \"errorDescripcio\": null,\n"
+                + "      \"justificant\": null,\n"
+                + "      \"certificacio\": \"https://se.caib.es/notibapi/interna/consulta/v2/certificacio/3975600\"\n"
+                + "    },\n"
+                + "    {\n"
+                + "      \"id\": 3975700,\n"
+                + "      \"emisor\": \"GOIB\",\n"
+                + "      \"organGestor\": {\n"
+                + "        \"codi\": \"A04027005\",\n"
+                + "        \"nom\": \"Direcció General de Simplificació Administrativa, Modernització i Administració Digital\",\n"
+                + "        \"descripcio\": null\n"
+                + "      },\n"
+                + "      \"procediment\": {\n"
+                + "        \"codi\": \"894623\",\n"
+                + "        \"nom\": \"Mesures de camp electromagnètic (SE)\",\n"
+                + "        \"descripcio\": null\n"
+                + "      },\n"
+                + "      \"numExpedient\": null,\n"
+                + "      \"concepte\": \"Activitat 4\",\n"
+                + "      \"descripcio\": \"Activitat de la Dehú\",\n"
+                + "      \"dataEnviament\": \"2024-01-29T16:49:32.019+0000\",\n"
+                + "      \"estat\": {\n"
+                + "        \"codi\": \"EXPIRADA\",\n"
+                + "        \"nom\": \"Expirada\",\n"
+                + "        \"descripcio\": \"S’ha superat la data de caducitat\"\n"
+                + "      },\n"
+                + "      \"dataEstat\": \"2024-02-08T23:00:00.000+0000\",\n"
+                + "      \"document\": {\n"
+                + "        \"nom\": \"annex_firmat.pdf\",\n"
+                + "        \"mediaType\": \"application/pdf\",\n"
+                + "        \"mida\": 67506,\n"
+                + "        \"url\": \"https://se.caib.es/notibapi/interna/consulta/v2/document/3975697\"\n"
+                + "      },\n"
+                + "      \"titular\": {\n"
+                + "        \"tipus\": {\n"
+                + "          \"codi\": \"FISICA\",\n"
+                + "          \"nom\": \"Persona física\",\n"
+                + "          \"descripcio\": null\n"
+                + "        },\n"
+                + "        \"nom\": \"Nom\",\n"
+                + "        \"llinatge1\": \"Llinatge1 Llinatge2\",\n"
+                + "        \"llinatge2\": null,\n"
+                + "        \"nif\": \"99999999R\",\n"
+                + "        \"email\": null\n"
+                + "      },\n"
+                + "      \"destinataris\": [],\n"
+                + "      \"error\": false,\n"
+                + "      \"errorData\": null,\n"
+                + "      \"errorDescripcio\": null,\n"
+                + "      \"justificant\": null,\n"
+                + "      \"certificacio\": \"https://se.caib.es/notibapi/interna/consulta/v2/certificacio/3975700\"\n"
+                + "    }\n"
+                + "  ],\n"
+                + "  \"error\": false,\n"
+                + "  \"errorDescripcio\": null,\n"
+                + "  \"errorData\": null\n"
+                + "}\n"
+                + "").build();
     }
     
 
